@startuml

class BusinessPartner {
	{field} BPN
	{field} Name
	{field} Business Partner Type
	{field} Classification
	{field} Relation
	{field} LegalForm
	{field} Identifier
	{field} Status
	{field} Address
	{field} Bank Accounts
	{field} Roles
	{field} Profile
}

enum BusinessPartnerTypeE {
	Brand
	Legal Entity
	Organizational Unit
	Site
	Unknown
	Natural Person
	Registered Individual
}

class BusinessPartnerStatus {
	{field} Official Denotation   
	{field} Valid From   
	{field} Valid Until   
	{field} Type
}

class BusinessPartnerStatusType {
	{field} Name   
	{field} Url   
	{field} Technical Key
}

enum BusinessPartnerStatusTypeE {
	Active   
	Dissolved   
	In Liquidation   
	Inactive   
	Insolvency
}

class BusinessPartnerRelation {
	{field} Started At (ISO 8601 timestamp)   
	{field} Ended At (ISO 8601 timestamp)   
	{field} Type   
	{field} Class   
	{field} Start Node (CX ID of the starting Node)   
	{field} End Node (CX ID of the target Node)
}

class BusinessPartnerRelationType {
	{field} Name   
	{field} Technical Key
}

enum BusinessPartnerRelationTypeE {
	CX_LEGAL_SUCCESSOR_OF
	CX_LEGAL_PREDECESSOR_OF
	CX_ADDRESS_OF
	CX_SITE_OF
	CX_OWNED_BY
	DIRECT_LEGALRELATION
	COMMERCIAL_ULTIMATE
	DOMMESTIC_BRANCH_RELATION
	INTERNATIONALBRANCH_RELATION
	DOMESTIC_LEGAL_ULTIMATE_RELATION
	GLOBAL_LEGAL_ULTIMATE_RELATION
	LEGAL_PREDECESSOR
	LEGAL_SUCCESSOR
	DNB_PARENT
	DNB_HEADQUARTER
	DNB_DOMESTIC_ULTIMATE
	DNB_GLOBAL_ULTIMATE
	LEI_DIREcT_PARENT
	LEI_INTERNATIONAl_BRANCH
	LEI_ULTIMATE_PARENT
}

class BusinessPartnerRelationClass {
	{field} Technical Key: BUSINESS_PARTNER_RELATION_CLASS_CX_HIERARCHY   
	{field} Name: CX Hierarchy
}

class BusinessPartnerClassificationType {
	{field} Name   
	{field} Url
}

enum BusinessPartnerClassificationTypeE {
	NACE
	NAF
	NAICS
	SIC
}

class BusinessPartnerClassification {
	{field} Type   
	{field} Code   
	{field} Value
}

class BusinessPartnerRole {
	{field} Technical Key   
	{field} Name
}

class LegalForm {
	{field} Name  
	{field} Technical Key  
	{field} Language  
	{field} Categories  
	{field} Url  
	{field} Main Abbrevation (An unique identifier for CDL)
}

note as N4
	<b>Example:</b>
	AT_7461 (AG in Austria)
	DE_9866 (AG in Germany)
	CH_0680 (AG in Switzerland)
	CN_1659 (Joint-Stock Company in China)
	...
end note

class LegalFormCategory {
	{field} name  
	{field} url
}

class BankAccount {
	{field} National Bank Identifier  
	{field} Natinal Bank Account Identifier  
	{field} Currency  
	{field} International Bank Identifier (BIC/SWIFT)  
	{field} International Bank Account Identifier (IBAN)  
	{field} Trust Scores
}

class Currency {
	{field} Technical Key  
	{field} Name
}

class Identifier {
	{field} Type  
	{field} Status  
	{field} Issuing Body  
	{field} Value
}

class IdentifierType {
	{field} Name  
	{field} Url  
	{field} Technical Key

}

note as N3
	<b>Example:</b>
	BPN
	CX ID
	DE BNUM
	DUNS ID
	EU_VAT_ID_DE
	EU_VAT_ID_FR
	SIREN
	SIRET
	SSI ID
	...
end note

class IdentifierStatus {
	{field} Name  
	{field} Technical Key
}

class IssuingBody {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

class Name {
	{field} Language 
	{field} Short Name  
	{field} Type  
	{field} Value
}

class NameType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum NameTypeE {
	Acronym  
	Doing Business As  
	Establishment  
	International  
	Local  
	Other  
	Registered
	Transliterated
	VAT Registered
}

class Language {
	{field} name ISO 639-1 (German)  
	{field} technicalKey ISO 639-1 two-letters
}

class Address {
	{field} BPN  
	{field} Postal Delivery Points  
	{field} Thoroughfares  
	{field} Premises  
	{field} Types  
	{field} Contexts  
	{field} Version  
	{field} Geographic Coordinates  
	{field} Post Codes  
	{field} Care Of  
	{field} Localities  
	{field} Administrative Areas  
	{field} Country  
	{field} Identifiers
}

class Site {
	{field} BPN     
	{field} Name
}

class AddressType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum AddressTypeE {
	Branch Office
	Care Of
	Headquarter
	Legal
	Legal Alternative
	PO Box
	Registered
	Registered Agent Mail
	Registered Agent Physical
	VAT Registered
	Unspecified
}

class AddressVersion {
	{field} CharacterSet  
	{field} Language
}

class Country {
	{field} Short Name  
	{field} Value / Country Code
}

note as N2
	<b>Example:</b>
	ISO 3166 Standard
	AT
	CH
	DE
	...
end note

class AdministrativeArea {
	{field} Fips Code  
	{field} Language  
	{field} Short Name  
	{field} Type  
	{field} Value
}

note as N1
	<b>Example:</b>
	FIPS
	ISO 3166
	...
end note

class AdministrativeAreaType {
	{field} County  
	{field} Other  
	{field} Region
}

class Locality {
	{field} Language  
	{field} Short Name  
	{field} Type  
	{field} Value
}

class LocalityType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum LocalityTypeE {
	Block
	City
	District
	Other
	Post Office
	Quarter
}

class GeographicCoordinates {
	{field} latitude  
	{field} longitude  
	{field} altitude
}

class PostCode {
	{field} Type  
	{field} Value
}

class PostCodeType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum PostCodeTypeE {
	CEDEX
	Large Mail User
	Other
	Post Box
	Regular
}


class PostalDeliveryPoint {
	{field} Language  
	{field} Short Name  
	{field} Number  
	{field} Type  
	{field} Value
}

class PostalDeliveryPointType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum PostalDeliveryPointTypeE {
	Interurban Delivery Point
	Mail Station
	Mailbox
	Other
	Post Office Box
}


class Thoroughfare {
	{field} Name  
	{field} Language  
	{field} Short Name  
	{field} Number  
	{field} Type  
	{field} Direction  
	{field} Value
}

class ThoroughfareType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum ThoroughfareTypeE {
	Industrial Zone
	Other
	River
	Square
	Street
}

class Premise {
	{field} Language  
	{field} Short Name  
	{field} Number  
	{field} Type  
	{field} Value
}

class PremiseType {
	{field} Name  
	{field} Url  
	{field} Technical Key
}

enum PremiseTypeE {
	Building
	Harbour
	Level
	Other
	Room
	Suite
	Unit
	Warehouse
}


class CharacterSet {
	{field} name  
	{field} Technical Key
}

enum CharacterSetName {
	Arabic
	Chinese
	Chinese traditional
	Cyrillic
	Greek
	Hangul Korean
	Hebrew
	Hiragana
	Kanji
	Katakana
	Latin
	Thai
	Western Latin Standard
}


N1 .. AdministrativeArea
N2 .. Country
N3 .. IdentifierType
N4 .. LegalForm

Name .. NameType
Name .. Language

BankAccount .. Currency

CharacterSet .. CharacterSetName

LegalForm .. Language
LegalForm .. LegalFormCategory


BusinessPartner "1" *--> "*" BusinessPartnerClassification
BusinessPartner "*" --> "0..1" LegalForm
BusinessPartner "1" *--> "*" BankAccount
BusinessPartner "1" *--> "*" Name
BusinessPartner "1" *--> "*" Identifier
BusinessPartner "0..1" --> "*" Address
BusinessPartner "1" *--> "0..1" BusinessPartnerStatus
BusinessPartner "*" --> "*" BusinessPartnerRelation
BusinessPartner "*" --> "*" BusinessPartnerRole
BusinessPartner "*" --> "*" BusinessPartnerTypeE
BusinessPartner "1" *--> "*" Site

BusinessPartnerStatus "*"--> "1" BusinessPartnerStatusType
BusinessPartnerStatusType .. BusinessPartnerStatusTypeE

BusinessPartnerRelation .. BusinessPartnerRelationType
BusinessPartnerRelationType .. BusinessPartnerRelationTypeE
BusinessPartnerRelation .. BusinessPartnerRelationClass

BusinessPartnerClassification "*" --> "1" BusinessPartnerClassificationType
BusinessPartnerClassificationType .. BusinessPartnerClassificationTypeE


Address "*" --> "0..1" Country
Address "*" --> "0..1" AddressType
Address "*" --> "0..1" GeographicCoordinates
Address "1" *--> "*" Premise
Address "1" *--> "*" Locality
Address "1" *--> "*" PostCode
Address "1" *--> "*" AddressVersion
Address "1" *--> "*" Thoroughfare
Address "1" *--> "*" AdministrativeArea
Address "1" *--> "*" PostalDeliveryPoint

Site "0..1" --> "*" Address

Identifier "*" --> "1" IdentifierType
Identifier "*" --> "1" IssuingBody
Identifier "*" --> "1" IdentifierStatus

Premise "*" --> "1" Language
Premise "*" -> "1" PremiseType
PremiseType .. PremiseTypeE

Locality "*" --> "1" Language
Locality "*" --> "1" LocalityType
LocalityType .. LocalityTypeE

PostCode "*" --> "1" PostCodeType
PostCodeType .. PostCodeTypeE

AddressVersion "*" --> "1" Language
AddressVersion "*" --> "1" CharacterSet
AddressType .. AddressTypeE

Thoroughfare "*" --> "1" Language
Thoroughfare "*" --> "1" ThoroughfareType
ThoroughfareType .. ThoroughfareTypeE

AdministrativeArea "*" --> "1" Language
AdministrativeArea "*" --> "1" AdministrativeAreaType

PostalDeliveryPoint "*" --> "1" Language
PostalDeliveryPoint "*" --> "1" PostalDeliveryPointType
PostalDeliveryPointType .. PostalDeliveryPointTypeE

NameType .. NameTypeE

@enduml